@@ -1851,6 +1851,9 @@ sub is_noun {my $self = shift; return $self->contains('pos', 'noun');}
 =method is_abbreviation()
 =cut
 sub is_abbreviation {my $self = shift; return $self->abbr() eq 'abbr';}
+=method is_active()
+=cut
+sub is_active {my $self = shift; return $self->contains('voice', 'act');}
 =method is_adjective()
 =cut
 sub is_adjective {my $self = shift; return $self->contains('pos', 'adj');}
@@ -1935,6 +1938,9 @@ sub is_participle {my $self = shift; return $self->contains('verbform', 'part');
 =method is_particle()
 =cut
 sub is_particle {my $self = shift; return $self->contains('pos', 'part');}
+=method is_passive()
+=cut
+sub is_passive {my $self = shift; return $self->contains('voice', 'pass');}
 =method is_past()
 =cut
 sub is_past {my $self = shift; return $self->contains('tense', 'past');}
